# studienarbeit-lorem-ipsum

./: .gitignore  .travis.yml  LoremIpsum.cabal  LoremIpsum_deutsch.txt  LoremIpsum_englisch.txt  LoremIpsum_tuerkisch.txt  README.md  faust.txt  stackCleanTest.bat
app/: Main.hs
doc/: doc-index.html  index.html
doc/LoremIpsum-0.1.0.0/: Lib.html  LoremIpsum.haddock  LoremIpsum.txt  doc-index.html  index.html  mini_Lib.html
doc/LoremIpsum-0.1.0.0/src/: Lib.html
doc/all/: doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-Z.html  index.html
src/: Lib.hs
test/: LibSpec.hs
txt/: Faust_deutsch.txt
